<resources>
    <string name="app_name">AppMVVM_HomeWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="userTextView">User</string>
    <string name="edatTextView">Edat</string>
    <string name="emailTextView">Email</string>
</resources>